--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 	<footer>
 		<div id="credits">
-			<p id="legal"><a href="http://jefflouden.com" title="Jeffrey Louden">J</a></p>
+			<p id="legal"><a href="http://jefflouden.com" title="Jeffrey Louden">Built by Jeffrey Louden</a></p>
 		</div>
 	</footer>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
