--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
   
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animate.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
   
   <meta property="og:site_name" content="{{ site.name }}">
   <meta property="og:title" content="{% if page.title %}{{ page.title | strip_html }}{% else %}Jeffrey Louden{% endif %}">
