--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -3,6 +3,6 @@ $containerMaxWidth: 1040px
 $tabletBreakpoint: 37.5em // 600px
 $desktopBreakpoint: 48.0625em // 769px
 
-$lusitana: 'Lusitana', serif
+$raleway: 'Raleway', serif
 
 $body: #fff
