--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -3,6 +3,7 @@ $containerMaxWidth: 1040px
 $tabletBreakpoint: 37.5em // 600px
 $desktopBreakpoint: 48.0625em // 769px
 
-$raleway: 'Raleway', serif
+$opensans: 'Lato', serif
+$josefin: 'Josefin Slab', serif
 
 $body: #fff
