--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 			<p id="legal"><a href="http://jefflouden.com" title="Jeffrey Louden">Built by Jeffrey Louden</a></p>
 		</div>
 	</footer>
+	<div id="overlay"></div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="{{ site[site.env].asset_path }}js/jquery-1.9.1.min.js"><\/script>')</script>
 	<script async src="js/core.min.js"></script>
