--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -14,15 +14,14 @@
 						<h4 class="date">
 							<time itemprop="startDate" datetime="{{ job.start_date_format }}">{{ job.start_date }}</time>-<time itemprop="endDate" datetime="{{ job.end_date_format }}">{{ job.end_date }}</time></h4>	
 					</div>
-					<h4 itemprop="hiringOrganization" itemscope itemtype="http://schema.org/Organization">
-					<h5  itemprop="jobLocation" itemscope itemtype="http://schema.org/Place">
-						<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-						    <span itemprop="addressLocality">{{ job.city }}</span>
-						    <span itemprop="addressRegion">{{ job.state }}</span>
-						</span>
-					</h5>
+					<h4 itemprop="hiringOrganization" itemscope itemtype="http://schema.org/Organization" class="organization">
 						<span itemprop="name">{{ job.organization }}</span>
 					</h4>
+					<h5  itemprop="jobLocation" itemscope itemtype="http://schema.org/Place">
+						<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+						    <span itemprop="addressLocality">{{ job.city }}</span>,&nbsp;<span itemprop="addressRegion">{{ job.state }}</span>
+						</span>
+					</h5>						
 					<p itemprop="description">{{ job.overview }}</p>
 					<ul itemprop="responsibilities">
 					{% for bullet in job.bullets %}
@@ -50,7 +49,7 @@
 					<h4 itemprop="hiringOrganization" itemscope itemtype="http://schema.org/Organization">
 						<span itemprop="name">{{ institution.organization }}</span>
 					</h4>
-					<p itemprop="description">{{ institution.overview }}</p>
+					<p itemprop="description">{{ institution.studied }}</p>
 				</li>
 			{% endfor %}
 			</ol>
