--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 				{% if page.header_content %}{{ page.header_content }}{% endif %}
 			</header>
 			<p>{{ site.data.main.intro }}</p>
-			<a href="#" id="show-resume"><i class="fa fa-file-text"></i>&nbsp;View resume</a>
+			<a href="#" id="show-resume" class="btn"><i class="fa fa-file-text"></i>&nbsp;View resume</a>
 		</article>
 		{% include resume.html %}
 	</div>
