--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -3,7 +3,10 @@ $containerMaxWidth: 1040px
 $tabletBreakpoint: 37.5em // 600px
 $desktopBreakpoint: 48.0625em // 769px
 
-$opensans: 'Lato', serif
-$josefin: 'Josefin Slab', serif
+$body-font: "freight-sans-pro", helvetica, sans-serif
+$header-font: "ff-tisa-web-pro", serif
 
 $body: #fff
+
+$seagreen: #3CB371
+$medium-seagreen: #2E8B57
