--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,8 @@
   
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animate.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,700' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="//use.typekit.net/szy1gvq.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   
   <meta property="og:site_name" content="{{ site.name }}">
   <meta property="og:title" content="{% if page.title %}{{ page.title | strip_html }}{% else %}Jeffrey Louden{% endif %}">
