--- a/css/style.sass
+++ b/css/style.sass
@@ -16,7 +16,7 @@ body
   width: 100%
 
 body
-  font-family: $opensans
+  font-family: $body-font
 
 +layout('#main', $layout: "container")
 
@@ -26,14 +26,18 @@ body
 #intro
   -webkit-font-smoothing: antialiased
   -webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px
+  margin-bottom: 20px
   &.hidden
     display: none
+  p
+    padding: 0 10px
+
 
 header[role="banner"]
-  font-family: $josefin
+  font-family: $header-font
   margin-bottom: 20px
   padding-top: 66.5%
-  background: url("https://scontent-a-pao.xx.fbcdn.net/hphotos-frc3/t1.0-9/1533903_10101101625510497_1249771273_n.jpg") no-repeat center center
+  background: url("https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn2/t1/1601125_10101101625784947_2118707774_n.jpg") no-repeat center center
   margin-right: -(percentage($gutter) / 2)
   margin-left: -(percentage($gutter) / 2)
   color: $body
@@ -48,9 +52,30 @@ header[role="banner"]
 #show-resume
   display: none
 
+.btn
+  padding: 5px 7px
+  border-radius: 4px
+  text-shadow: none
+  background: $seagreen
+  border: 1px solid $medium-seagreen
+  color: $body
+  +prefix(transition, "background 250ms ease, color 250ms ease")
+  text-transform: uppercase
+  font-weight: 700
+  font-size: 12px
+  &:hover
+    background: $medium-seagreen
+  &.invert
+    background: $body
+    color: $seagreen
+    border: none
+    &:hover
+      color: $medium-seagreen
+
 #resume
+  padding: 0 10px
   h2
-    font-family: $josefin
+    font-family: $header-font
     font-size: 24px
     font-weight: 700
     margin-bottom: 20px
@@ -61,12 +86,12 @@ header[role="banner"]
   margin-bottom: 20px
 
 #legal
-  font-family: $josefin
+  font-family: $header-font
   background: $body
   color: #000
   font-size: 12px
   +prefix(transition, "opacity 200ms ease-in-out")
-  margin: 20px 0 10px
+  margin: 40px 0 10px
   text-align: center
 
 #overlay
@@ -84,7 +109,7 @@ header[role="banner"]
   +columns($selector:"#intro", $count:6)
 
   body
-    background: url("https://scontent-a-pao.xx.fbcdn.net/hphotos-frc3/t1.0-9/1533903_10101101625510497_1249771273_n.jpg") no-repeat center center
+    background: url("https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn2/t1/1601125_10101101625784947_2118707774_n.jpg") no-repeat center center
     background-size: cover
 
   header[role="banner"]
@@ -101,11 +126,15 @@ header[role="banner"]
     margin-bottom: 40px !important
     color: $body
     text-shadow: 1px 1px 0 rgba(0,0,0,0.6)
+    background: rgba(0, 0, 0, 0.3)
+    padding: 20px
+    box-sizing: border-box
     h1
       font-size: 24px
     p
       margin-bottom: 10px
       line-height: 1.3
+      padding: 0
 
   #resume
     display: none
@@ -120,6 +149,7 @@ header[role="banner"]
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5)
     max-width: 98%
     margin: 0 auto
+    padding: 0
     &.visible
       display: block
       z-index: 1000
@@ -134,18 +164,30 @@ header[role="banner"]
       overflow-y: hidden
       clear: both
       margin-bottom: 10px
+      line-height: 1.5
+    .description
+      margin: 10px 0
     h3
       float: left
     h4
       &.date
         float: right
+        color: grey
+        text-transform: uppercase
+        font-size: 13px
       &.organization
-        display: inline-block
+        display: inline
+        font-style: italic
+        font-weight: 500
+        float: left
     h5
-      display: inline-block
+      display: inline
+      float: right
     ol
       > li
         margin-bottom: 20px
+        padding-bottom: 20px
+        border-bottom: 1px Solid lightgray
         &:last-child
           margin-bottom: 0
 
@@ -158,20 +200,19 @@ header[role="banner"]
   #download-resume
     display: block
     position: absolute
-    top: 15px
-    color: gray
     text-decoration: none
+    right: 15px
   #show-resume
-    display: block
+    display: inline-block
     text-decoration: none
 
   #download-resume
-    left: 20px
+    bottom: 10px
     font-size: 13px
     text-transform: uppercase
   
   #close-resume
-    right: 15px
+    top: 15px
     opacity: 0.7
     +prefix(transition, "opacity 200ms ease-in-out")
     &:hover
