so many more updates

--- a/css/style.sass
+++ b/css/style.sass
@@ -190,6 +190,7 @@ header[role="banner"]
         border-bottom: 1px Solid lightgray
         &:last-child
           margin-bottom: 0
+          border-bottom: none
 
     ul[itemprop="responsibilities"]
       list-style: disc
