--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,8 @@
 	</footer>
 	<div id="overlay"></div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="{{ site[site.env].asset_path }}js/jquery-1.9.1.min.js"><\/script>')</script>
+	<script>window.jQuery || document.write('<script src="js/jquery-1.9.1.min.js"><\/script>')</script>
 	<script async src="js/core.min.js"></script>
-	{% if page.extra_js %}<script src="{{ site[site.env].asset_path }}{{ page.extra_js }}"></script>{% endif %}
-	<script type="text/javascript">var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-21427100-1']);_gaq.push(['_trackPageview']);(function(){var ga=document.createElement('script');ga.type='text/javascript';ga.async=true;ga.src=('https:'==document.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s)})();</script>
+	<script type="text/javascript">var _gaq=_gaq||[];_gaq.push(['_setAccount','{{ site.google_analytics_id }}']);_gaq.push(['_trackPageview']);(function(){var ga=document.createElement('script');ga.type='text/javascript';ga.async=true;ga.src=('https:'==document.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s)})();</script>
 </body>
 </html>
