--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,50 +4,39 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>{% if page.title %}{{ page.title | strip_html }} — {% endif %}{{ site.name }}</title>
+  <title>{{ data.main.name }}</title>
 
-  <meta name="author" content="Jeffrey Louden{% if relative_title != ' | ' %}{{ relative_title }}{% endif %}">
-  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}Technology Lead at The New Yorker and former Lead Developer at Obama for America based in New York, NY.{% endif %}">
+  <meta name="author" content="{{ data.main.name }}">
+  <meta itemprop="name" content="{{ data.main.name }}">
+  <meta name="description" content="{{ data.main.meta_description }}">
+  <meta itemprop="image" content="{{ data.main.meta_image }}">
 
-  <link rel="author" href="https://plus.google.com/112822764971954618962">
-  <link rel="canonical" href="{{ site.url }}{{ relative_path }}">
+  <link rel="author" href="https://plus.google.com/{{ data.main.google_plus_id }}">
+  <link rel="canonical" href="{{ site.url }}">
   <link type="text/plain" rel="author" href="{{ site.url }}humans.txt">
-  <link rel="alternate" type="application/atom+xml" href="{{ site.url }}feed.xml" />
   
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animate.min.css">
-<script type="text/javascript" src="//use.typekit.net/szy1gvq.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   
-  <meta property="og:site_name" content="{{ site.name }}">
-  <meta property="og:title" content="{% if page.title %}{{ page.title | strip_html }}{% else %}Jeffrey Louden{% endif %}">
+  <script type="text/javascript" src="//use.typekit.net/{{ site.typekit_id }}.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  
   <meta property="og:type" content="website">
-  <meta property="og:url" content="{{ site.url }}{{ relative_path }}">
-  <meta property="og:description" content="{% if page.og.description %}{{ page.og.description }}{% else %}{% if page.description %}{{ page.description }}{% else %}Technology Lead at The New Yorker and former Lead Developer at Obama for America based in New York, NY.{% endif %}{% endif %}">
-  <meta property="og:image" content="{% if page.og.image %}{{ page.og.image }}{% else %}{{ site.url }}img/fb-thumb.jpg"{% endif %}>
-  
-  <meta itemprop="name" content="Jeffrey Louden">
-  <meta itemprop="description" content="Technology Lead at The New Yorker and former Lead Developer at Obama for America based in New York, NY.">
-  <meta itemprop="image" content="{% if page.og.image %}{{ page.og.image }}{% else %}{{ site.url }}img/fb-thumb.jpg{% endif %}">
+  <meta property="og:site_name" content="{{ data.main.name }}">
+  <meta property="og:title" content="{{ data.main.og_title }}">
+  <meta property="og:url" content="{{ site.url }}">
+  <meta property="og:description" content="{{ data.main.og_description }}">
+  <meta property="og:image" content="{{ data.main.og_image }}">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@jeffreylouden">
-  <meta name="twitter:title" content="{% if page.title %}{{ page.title | strip_html }}{% else %}Jeffrey Louden{% endif %}">
-  <meta name="twitter:description" content="{% if page.og.description %}{{ page.og.description }}{% else %}{% if page.description %}{{ page.description }}{% else %}Technology Lead at The New Yorker and former Lead Developer at Obama for America based in New York, NY.{% endif %}{% endif %}">
-  <meta name="twitter:url" content="{{ site.url }}{{ relative_path }}">
-  <meta name="twitter:image" content="{% if page.og.image %}{{ page.og.image }}{% else %}{{ site.url }}img/fb-thumb.jpg{% endif %}">
+  <meta name="twitter:site" content="{{ data.main.twitter_handle }}">
+  <meta name="twitter:title" content="{{ data.main.twitter_title }}">
+  <meta name="twitter:description" content="{{ data.main.twitter_description }}">
+  <meta name="twitter:url" content="{{ site.url }}">
+  <meta name="twitter:image" content="{{ data.main.twitter_image }}">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="HandheldFriendly" content="true" />
-
-  <link rel="apple-touch-icon" href="{{ site[site.env].asset_path }}apple-touch-icon.png">
-  <link rel="apple-touch-icon-precomposed" href="{{ site[site.env].asset_path }}apple-touch-icon-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site[site.env].asset_path }}apple-touch-icon-57x57-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site[site.env].asset_path }}apple-touch-icon-72x72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site[site.env].asset_path }}apple-touch-icon-114x114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site[site.env].asset_path }}apple-touch-icon-144x144-precomposed.png">
-
-  <link rel="shortcut icon" href="{{ site[site.env].asset_path }}favicon.ico" />
   
 </head>
 <body>
